# aurora

./: .buildinfo  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  AURORA_TEST_OPTIMIZATION_REPORT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  genindex.html  index.html  objects.inv  pass_band_optimization.patch  profile_optimized.prof  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/workflows/: docs.yaml  docs.yml  draft-pdf.yml  publish.yaml  test_notebooks.yaml  tests.yaml  tests.yml
_downloads/17e577693b5b5f7e87016883783922a4/: placeholder.ipynb
_modules/: index.html
_modules/aurora/: general_helper_functions.html  interval.html
_sources/: index.rst.txt
_sources/api/: aurora.config.emtf_band_setup.rst.txt  aurora.config.metadata.rst.txt  aurora.config.rst.txt  aurora.pipelines.rst.txt  aurora.test_utils.parkfield.rst.txt  aurora.test_utils.rst.txt  aurora.test_utils.synthetic.rst.txt  index.rst.txt  (+7 more)
api/: aurora.config.emtf_band_setup.html  aurora.config.html  aurora.config.metadata.html  aurora.html  aurora.pipelines.html  aurora.sandbox.html  aurora.sandbox.io_helpers.html  aurora.test_utils.html  aurora.test_utils.mth5.html  aurora.test_utils.parkfield.html  aurora.test_utils.synthetic.html  aurora.time_series.html  aurora.transfer_function.html  aurora.transfer_function.plot.html  aurora.transfer_function.regression.html  aurora.transfer_function.weights.html  general_helper_functions.html  index.html  interval.html  modules.html  pipelines.html  time_series.html  transfer_function.html
aurora/: __init__.py  aurora_driver.py  channel_nomenclature.py  estimate_transfer_function.py  general_helper_functions.py  interval.py
docs/: conf.py  execute_notebooks.py  index.rst
examples/: config_example.html  config_example.ipynb  create_mth5_for_parkfield_with_rover.html  create_mth5_for_parkfield_with_rover.ipynb  dataset_definition.html  dataset_definition.ipynb  dataset_definition.nbconvert.html  dataset_definition.nbconvert.ipynb  earthscope_magnetic_data_tutorial.html  index.html  make_cas04_single_station_h5.html  make_cas04_single_station_h5.ipynb  make_cas04_single_station_h5.nbconvert.html  make_cas04_single_station_h5.nbconvert.ipynb  operate_aurora.html  operate_aurora.nbconvert.html  operate_aurora.nbconvert.ipynb  placeholder.html  placeholder.py  sg_execution_times.html
paper/: make_mth5_driver_v0.2.0.ipynb  paper.bib  paper.md  process_cas04_mulitple_station.ipynb
tests/: cfg1.xml  cfg2.xml  conftest.py  emtfxml_test.xml  test_apodization_window.py  test_doc_build.py  test_general_helper_functions.py  test_run_on_commit.ipynb  test_windowing_scheme.py
tutorials/: make_cas04_single_station.html  pkd_units_check.html  pkd_units_check.ipynb  pkd_units_check.nbconvert.html  pkd_units_check.nbconvert.ipynb  placeholder.py  process_cas04_multiple_station.html  process_cas04_multiple_station.ipynb  process_cas04_multiple_station.nbconvert.html  process_cas04_multiple_station.nbconvert.ipynb  process_cas04_single_station.html  process_cas04_single_station.nbconvert.html  processing_configuration.html  processing_configuration.ipynb  processing_configuration.nbconvert.html  processing_configuration.nbconvert.ipynb  synthetic_data_processing.html  synthetic_data_processing.ipynb  synthetic_data_processing.nbconvert.html  tf_calculation.html
user-docs/: installing.html
(+469 files in other folders)
