
[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora"
version = "0.6.0"
description = "Processing Codes for Magnetotelluric Data"
readme = "README.rst"
requires-python = ">=3.10"
authors = [
  {name = "Karl Kappler", email = "karl.kappler@berkeley.edu"},
]
license = {text = "MIT license"}
keywords = ["aurora"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mth5>=0.6.0",
    "numba>=0.58",
    "obspy",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/simpeg/aurora"

[tool.setuptools.packages.find]
include = ["aurora", "aurora.*"]

[tool.setuptools]
include-package-data = true

license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]


[project.optional-dependencies]
test = [
    "pytest>=3",
    "pytest-runner",
    "pytest-xdist",
    "pytest-subtests",
    "pytest-benchmark",
]
dev = [
    "black",
    "flake8",
    "ipython",
    "ipykernel",
    "nbsphinx",
    "numpydoc",
    "papermill",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-subtests",
    "pytest-xdist",
    "toml",
    "sphinx_gallery",
    "sphinx_rtd_theme",
]

[tool.bumpversion]
current_version = "0.6.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "aurora/__init__.py"





